Fixed broken CSS on signupform & added responsive to it

--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -520,7 +520,6 @@ button#search-submit i {
 }
 
 #signup-wrapper {
-    visibility: hidden;
 	margin: 0 auto;
 	width: 26em;
 	position: relative;
@@ -739,15 +738,15 @@ table {
         margin-left: -15%;
     }
     
-    #login-wrapper {
+    #login-wrapper, #signup-wrapper {
         width: 100%;
     }
     
-    #loginForm input {
+    #loginForm input, #signupForm input {
         padding: 0.55em 0.75em 0.55em 0.75em;
     }
     
-    #loginForm label {
+    #loginForm label, #signupForm label {
         font-size: 85%;
     }
 }
